# AutomatedLife

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap  configure  configure.in
doc/docbook/: catalog.xml  examples.xml  index.xml  installation.xml  introduction.xml  se.xpr  tools.xml  usage.xml
doc/html/: examples.html  filter.html  filtering.html  index.html  indexing.html  installation.html  perl.html  semantic.html  spreading_activation.html  tools.html  usage.html  utility.html  weighting.html  weights.html
examples/: Makefile.am  Makefile.in  attach_titles.cpp  file_finder.cpp  file_reader.cpp  linlog.cpp  mst.cpp  query.cpp  search.cpp  simple_search.cpp  summarize.cpp  tagger.cpp  test.cpp
include/: Makefile.am  Makefile.in  filter.fw  indexing.fw  semantic.fw  spreading_activation.fw  utility.fw  weighting.fw
include/semantic/: abbreviations.hpp  config.hpp.in  config.sh.in  exception.hpp  file_finder.hpp  file_reader.hpp  filter.hpp  indexing.hpp  parsing.hpp  properties.hpp  pruning.hpp  query.hpp  search.hpp  semantic.hpp  subgraph.hpp  summarization.hpp  tagger.hpp  utility.hpp  version.hpp
include/semantic/analysis/: agglomerate.hpp  connected_components.hpp  harel_bfs_cluster.hpp  harel_simple_random_walk_cluster.hpp  linlog.hpp  math.hpp  shortest_paths.hpp  silhouette.hpp  utility.hpp
include/semantic/analysis/agglomerate_clustering/: cluster_helper.hpp  dendrogram.hpp  mst.hpp
include/semantic/ranking/: spreading_activation.hpp
include/semantic/stem/: danish_stem.h  dutch_stem.h  english_stem.h  finnish_stem.h  french_stem.h  german_stem.h  italian_stem.h  license.txt  meta.h  norwegian_stem.h  portuguese_stem.h  spanish_stem.h  stemming.h  string_util.h  swedish_stem.h  utilities.h
include/semantic/storage/: base.hpp  concept.hpp  mysql5.hpp  none.hpp  sqlite3.hpp
include/semantic/subgraph/: bfs.hpp  none.hpp  pruning_random_walk.hpp  random_walk.hpp
include/semantic/weighting/: idf.hpp  lg.hpp  none.hpp  tf.hpp
m4/: ac_cxx.m4  boost.m4  have_tr1.m4  iconv.m4  lib-link.m4  msword-reader.m4  mysql.m4  mysqlr.m4  pdf-reader.m4  sqlite3.m4  zlib.m4
pl/: API.xs  Changes  MANIFEST  Makefile.PL.in  README  typemap
pl/lib/Semantic/: API.pm
pl/scripts/: create_mysql_db.pl  export_wordlist.pl  federated.pl  index.pl  search.pl  stub_create_mysql.pl
pl/t/: api.t  mysql.t  sqlite.t
qt/semantic_engine/: resources.qrc  search.pro  search.rc
qt/semantic_engine/data/: lexicon.txt  stoplist_en.txt
qt/semantic_engine/icons/: SemanticEngine.icns
qt/semantic_engine/include/: basket.h  clusters.h  collection.h  display.h  graph_controller.h  locate_datafile.h  mainwindow.h  results.h  se_graph.h  single_result.h  tabbed_display.h  visual_display.h  visual_gl_display.h
qt/semantic_engine/src/: basket.cpp  clusters.cpp  collection.cpp  display.cpp  graph_controller.cpp  locate_datafile_mac.cpp  locate_datafile_unix.cpp  locate_datafile_win32.cpp  main.cpp  mainwindow.cpp  results.cpp  single_result.cpp  tabbed_display.cpp  visual_display.cpp  visual_gl_display.cpp
share/: Makefile.am  Makefile.in  lexicon.txt  stoplist_en.txt
sql/mysql5/: initialize.sh  procedures.sql  tables.sql  termlist.sql  triggers.sql
sql/sqlite3/: tables.sql  termlist.sql  triggers.sql
tools/: Makefile.am  Makefile.in  indexer.cpp  search.cpp
win32/: PerlMakefile.win32  config.hpp
