
# include all the headers we want to install
EXTRA_DIST= semantic/config.hpp.in \
			semantic/config.sh.in
			
nobase_include_HEADERS=		semantic/abbreviations.hpp \
							semantic/analysis/agglomerate_clustering/dendrogram.hpp \
							semantic/analysis/agglomerate_clustering/cluster_helper.hpp \
							semantic/analysis/agglomerate_clustering/mst.hpp \
							semantic/analysis/agglomerate.hpp \
							semantic/analysis/connected_components.hpp \
							semantic/analysis/harel_bfs_cluster.hpp \
							semantic/analysis/harel_simple_random_walk_cluster.hpp \
							semantic/analysis/linlog.hpp \
							semantic/analysis/math.hpp \
							semantic/analysis/shortest_paths.hpp \
							semantic/analysis/silhouette.hpp \
							semantic/analysis/utility.hpp \
							semantic/config.hpp \
							semantic/config.sh \
							semantic/exception.hpp \
							semantic/file_finder.hpp \
							semantic/file_reader.hpp \
							semantic/filter.hpp \
							semantic/indexing.hpp \
							semantic/parsing.hpp \
							semantic/properties.hpp \
							semantic/pruning.hpp \
							semantic/query.hpp \
							semantic/ranking/spreading_activation.hpp \
							semantic/search.hpp \
							semantic/semantic.hpp \
							semantic/stem/danish_stem.h \
							semantic/stem/dutch_stem.h \
							semantic/stem/english_stem.h \
							semantic/stem/finnish_stem.h \
							semantic/stem/german_stem.h \
							semantic/stem/italian_stem.h \
							semantic/stem/license.txt \
							semantic/stem/meta.h \
							semantic/stem/norwegian_stem.h \
							semantic/stem/portuguese_stem.h \
							semantic/stem/spanish_stem.h \
							semantic/stem/stemming.h \
							semantic/stem/string_util.h \
							semantic/stem/swedish_stem.h \
							semantic/stem/utilities.h \
							semantic/storage/base.hpp \
							semantic/storage/concept.hpp \
							semantic/storage/mysql5.hpp \
							semantic/storage/none.hpp \
							semantic/storage/sqlite3.hpp \
							semantic/subgraph/bfs.hpp \
							semantic/subgraph.hpp \
							semantic/subgraph/none.hpp \
							semantic/subgraph/pruning_random_walk.hpp \
							semantic/subgraph/random_walk.hpp \
							semantic/summarization.hpp \
							semantic/tagger.hpp \
							semantic/utility.hpp \
							semantic/version.hpp \
							semantic/weighting/idf.hpp \
							semantic/weighting/lg.hpp \
							semantic/weighting/none.hpp \
							semantic/weighting/tf.hpp
